KFileWidget: Do not override filename with folder name if edited

If the filename input has been modified, do not override it with
the name of the folder when selecting a folder.

BUG: 502794
FIXED-IN: 6.14